@@ -1,3 +1,7 @@
+2002-12-10    <smulloni@smullbola.smullyan.org>
+
+	* pylibs/containers/treenode.py: a simple tree class.
+
 2002-12-05  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* pylibs/formlib/dispatcher.py: more default value gotchas.
